src/shell/snapshots/mise__shell__bash__tests__prepend_env.snap
---
source: src/shell/bash.rs
expression: "replace_path(&bash.prepend_env(\"PATH\", \"/some/dir:/2/dir\"))"
---
export PATH="'/some/dir:/2/dir':$PATH"
