src/shell/snapshots/mise__shell__bash__tests__prepend_path.snap
---
source: src/shell/bash.rs
expression: replace_path(&bash.prepend_path(&paths))
---
export PATH="/some/other/dir:/some/dir:$PATH"

