src/shell/snapshots/mise__shell__bash__tests__unset_env.snap
---
source: src/shell/bash.rs
expression: "Bash::default().unset_env(\"FOO\")"
snapshot_kind: text
---
unset FOO
